--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+}
+
+.fCarrousel{
+  margin-top: 50px;
+  width: 90%;
+  height: 595px;
+  margin-left: 5%;
+  object-fit: cover;
+  }
+
+  #iconoCarrito{
+    color: rgb(179, 170, 170);
+    border: none;
+    height: 35px;
+    width: 35px;
+    margin-left: auto;
+    margin-right:20px;
+}
+
+#logo{
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+}
+
+#productos{
   text-align: center;
+  color: rgb(179, 170, 170);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.cards{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.card{
+  width: 20rem;
+  margin: 20px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
