--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -2,12 +2,17 @@
 
 .Agregar{
     width: 100%;
-    height: 10%;
+    height: 50px;
     background-color: rgb(42, 44, 44);
     border: none;
     padding: 1rem;
     border-radius: 1rem;
     color: white;
+    margin-top: 5px;
+    margin-bottom: 0px;
+    text-align: center;
+    padding: auto;
+    padding-bottom: 35px;
 }
 .Agregar:hover{
   border: 1px solid black;
@@ -17,12 +22,12 @@
   display: flex;
   margin: auto;
   margin-left: 25%;
-  width: 30%;
-  height: 40%;
+  width: 60%;
+  height: 90px;
 }
 
 .Boton1{
-  margin: auto;
+  margin: 5px;
   padding: 1rem;
   font-size: 2rem;
   cursor: pointer;
