--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -4,5 +4,12 @@
     height: 40px;
     width: 40px;
     margin-left: auto;
-    margin-right:20px;
+    margin-right:0px;
+    padding-right: 0px;
+}
+
+.contenedorCarrito{
+    margin-left: auto;
+    margin-right:30px;
+    padding-right: 0px;
 }
