--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -24,7 +24,14 @@
     margin-top: 130px;
     margin-bottom: 0px;
     text-align: center;
+    margin-left: 10px;
   }
+
+.detailCompra:hover{
+  background-color: rgb(54, 56, 56);
+  color: white;
+  }
+
   .descripcionCard{
     margin-bottom: 50px;
   }
