--- a/src/components/ItemCart/ItemCart.css
+++ b/src/components/ItemCart/ItemCart.css
@@ -5,14 +5,12 @@
     display: flex;
     height: 150px;
     width: 70%;
-    border: 2px solid black;
 }
 
 .imageBox{
     height: 150px;
     width: 150px;
     display: flex;
-    border: 2px solid black;
     object-fit: contain;
 }
 
@@ -25,4 +23,15 @@
 .productInfo{
     font-size: 20px;
     margin: 20px;
+    color: rgb(179, 170, 170);
+}
+
+.deleteButton{
+    border: 2px solid rgb(180, 166, 166);
+    border-radius: 10px;
+    color: rgb(151, 131, 131);
+}
+
+.deleteButton:hover{
+    background-color:  rgb(226, 226, 226);
 }
