--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -11,6 +11,7 @@
   .tituloCard{
     margin: 15px;
     font-size: 25px;
+    color: rgb(179, 170, 170);
   }
   .detailCompra{
     text-decoration: none;
@@ -34,4 +35,5 @@
 
   .descripcionCard{
     margin-bottom: 50px;
+    color: rgb(179, 170, 170);
   }
