--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,6 @@
 .footer{
-    background-color: aqua;
+    border: solid 2px rgb(70, 65, 65);
     width: 100%;
-    height: 150px;
+    height: 70px;
+    padding: 20px;
 }
