--- a/src/components/Carrousel/Carrousel.css
+++ b/src/components/Carrousel/Carrousel.css
@@ -1,9 +1,9 @@
 .fCarrousel{
-    margin-top: 50px;
-    width: 70%;
+    margin-top: 10px;
+    width: 80%;
     height: 550px;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 10%;
+    margin-right: 10%;
     object-fit: cover;
     }
 
@@ -16,3 +16,16 @@
     background-color: rgb(151, 131, 131);
      border-radius: 50%;
  }
+
+ @media only screen and (max-width: 420px){
+    *{
+        overflow-x: hidden;
+    }
+    .fCarrousel{
+        margin-top: 25px;
+        width: 100%;
+        height: 300px;
+        margin-left: 0;
+        margin-right: 0;
+        }
+}
