--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer{
-    border: solid 2px rgb(70, 65, 65);
+    border-top: solid 2px rgb(70, 65, 65);
     width: 100%;
     height: 70px;
     padding: 20px;
